--- a/src/styles/components/title.scss
+++ b/src/styles/components/title.scss
@@ -5,10 +5,14 @@
     align-items: center;
 
     &--works {
-        grid-area: title;
+        //grid-area: title;
         width: 100%;
         background-color: #faf8f0;
+        padding: 50px 0;
 
+        @include phones {
+            padding: 30px 0;
+        }
     }
 
 
@@ -79,7 +83,7 @@
 
         @include tablets {
             width: 472px;
-            margin-top: 32px;
+            //margin-top: 32px;
             margin-bottom: 32px;
 
         }
@@ -87,7 +91,7 @@
         @include phones {
             width: 95%;
             margin-bottom: 20px;
-
+            margin-top: 30px;
         }
 
 
