--- a/src/styles/components/triangles.scss
+++ b/src/styles/components/triangles.scss
@@ -1,13 +1,21 @@
 
 .triangles {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     width: 100%;
-    grid-area: hero;
+    //grid-area: hero;
     z-index: 50;
-    margin-bottom: -2px;
-    align-self: end;
+    margin-bottom: -3px;
+    //align-self: end;
     fill: $white;
 
     @include tablets {
+        margin-bottom: -3px;
+    }
+
+    @include phones {
         margin-bottom: -1px;
     }
 }
@@ -28,7 +36,7 @@
 }
 
 .triangles--blog {
-    grid-area: heroBlog;
+    //grid-area: heroBlog;
     
     .triangle__left {
         fill: $white;
@@ -40,7 +48,7 @@
 }
 
 .triangles--works {
-    grid-area: hero;
+    //grid-area: hero;
     
     .triangle__left {
         fill: #faf8f0;
@@ -52,5 +60,5 @@
 }
 
 .triangles--policy {
-    grid-area: hero;
+    //grid-area: hero;
 }
