--- a/src/templates/common/variables.pug
+++ b/src/templates/common/variables.pug
@@ -131,7 +131,7 @@
         {
         title: "Почему платные шаблоны лучше бесплатных?", 
         date: "Преимущества платных шаблонов",
-        text: 'Прежде всего платные шаблоны обладают гораздо большей безопасностью. Например, на сайте <a href=””>themeforest.net</a> можно купить хорошие шаблоны, прошедшие дополнительную строгую проверку независимых от создателей шаблона специалистов компании. Кроме того, зачастую платные шаблоны имеют поддержку со стороны разработчика, Вы можете всегда задать свои вопросы, а также периодически обновляются и совершенствуются под современные реалии. Если Вам потребуется помощь в подборе, установке, наполнении сайта, буду рада помочь.'
+        text: 'Прежде всего платные шаблоны обладают гораздо большей безопасностью. Например, на сайте themeforest.net можно купить хорошие шаблоны, прошедшие дополнительную строгую проверку независимых от создателей шаблона специалистов компании. Кроме того, зачастую платные шаблоны имеют поддержку со стороны разработчика, Вы можете всегда задать свои вопросы, а также периодически обновляются и совершенствуются под современные реалии. Если Вам потребуется помощь в подборе, установке, наполнении сайта, буду рада помочь.'
         },    
         {
         title: "Как сделать сайт самостоятельно?", 
@@ -161,12 +161,12 @@
         {
         title: "Что такое домен?", 
         date: "О том, что такое домен и для чего он нужен",
-        text: 'Домен или доменное имя – это имя сайта, отображаемое в адресной строке. Благодаря домену пользователи могут легко попадать на нужный сайт. Ведь домен легче запомнить, чем IP адрес, состоящий из комбинации цифр. Важно, насколько доменное имя соответствует названию компании и легко запоминается. Пример домена – <a href=”colibri-web.ru”> colibri-web.ru</a>'
+        text: 'Домен или доменное имя – это имя сайта, отображаемое в адресной строке. Благодаря домену пользователи могут легко попадать на нужный сайт. Ведь домен легче запомнить, чем IP адрес, состоящий из комбинации цифр. Важно, насколько доменное имя соответствует названию компании и легко запоминается. Пример домена – colibri-web.ru'
         },    
         {
         title: "Как выбрать и где купить домен?", 
         date: "Краткие рекомендации по выбору домена",
-        text: 'Я рекомендую покупать домен у официальных регистраторов. Список таковых можно найти в Интернете. У них есть лицензия, они давно на рынке и имеют хорошую репутацию. Сама пользуюсь <a href=”https://www.reg.ru/?rlink=reflink-26117”> REG.RU </a> и пока всем довольна. Подобрать домен лучше так, чтобы он максимально точно ассоциировался с компанией, был коротким и легко запоминаемым.'
+        text: 'Я рекомендую покупать домен у официальных регистраторов. Список таковых можно найти в Интернете. У них есть лицензия, они давно на рынке и имеют хорошую репутацию. Сама пользуюсь REG.RU и пока всем довольна. Подобрать домен лучше так, чтобы он максимально точно ассоциировался с компанией, был коротким и легко запоминаемым.'
         }              
     ]
 
