--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -19,7 +19,7 @@ block content
                             .owner__photo
                                 img(src="img/content/my_image.jpg" alt="Веб-разработчик").owner__img
                             h2.owner__title.owner__title--intro Евгения Морозова
-                            span.owner__description Личный сайт веб-разработчика
+                            span.owner__description Личный сайт веб-дизайнера и веб-разработчика
                         .socials.socials--intro
                             include ../common/socials.pug
                     nav.menu.menu--intro
