--- a/src/styles/components/articles.scss
+++ b/src/styles/components/articles.scss
@@ -1,8 +1,15 @@
 .articles {
-    grid-area: articles;
+    //grid-area: articles;
     display: flex;
+    width: 66%;
+
+    @include desktop-large {
+        width: 73.5%;
+
+    }
 
     @include tablets {
+        width: 100%;
         padding-left: 24px;
         padding-right: 24px;
     }
