--- a/src/styles/components/auth.scss
+++ b/src/styles/components/auth.scss
@@ -1,14 +1,17 @@
 .auth {
     position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    backface-visibility: hidden;
     transform: rotateY(180deg);   
-
+    z-index: 100;
 }
 
 .auth-form {
