--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,7 +1,8 @@
 .hero {
-    grid-area: hero;
+    //grid-area: hero;
     width: 100%;
-    height: 100%;
+    //height: 100%;
+    height: 603px;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -10,9 +11,25 @@
     position: relative;
     overflow: hidden;
 
-    &--blog {
-        grid-area: heroBlog;
+    @include desktop-large {
+        height: 603px;
     }
+
+    @include tablets {
+        height: 506px;
+    }
+
+    @include phones {
+        height: 570px;
+    }
+
+
+    &--blog {
+        //grid-area: heroBlog;
+    }
+
+
+
 }
 
 .hero__bg {
@@ -29,6 +46,9 @@
 
 .hero__content {
     position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 25%;
     
     @include phones {
         width: 100%;
@@ -55,6 +75,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    top: 0;
 
 
     &--blog {
@@ -69,9 +90,14 @@
     & .owner__photo {
         margin-top: 0px;
     }
-    & .owner__description {
-        @include roboto(300);
+
+    @include phones {
+        padding: 10px;
     }
+    
+    /*& .owner__description {
+        @include roboto(300);
+    }*/
 }
 
 .hero__arrow-btn {
@@ -86,6 +112,10 @@
     @include phones {
         bottom: 9%;
     }
+
+    &:hover .hero__arrow-down {
+        opacity: 1;
+    }
 }
 
 .hero__arrow-down {
@@ -95,9 +125,10 @@
     height: 17px;
     transition: opacity 0.5s;
     cursor: pointer;
-    &:hover {
+
+    /*&:hover {
         opacity: 1;
-    }
+    }*/
 
 
 
