--- a/src/styles/components/intro.scss
+++ b/src/styles/components/intro.scss
@@ -1,8 +1,11 @@
 .intro {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    //top: 50%;
+    //left: 50%;
+    top: 0;
+    left: 0;
+    transition: all 0.5s;
+    //transform: translate(-50%,-50%);
     width: 100%;
     height: 100%;
     display: flex;
@@ -10,6 +13,7 @@
     align-items: center;
     justify-content: center;
     backface-visibility: hidden;
+    z-index: 200;
 }
 
 .intro__welcome {
@@ -30,6 +34,11 @@
     background-color: rgba(252,252,252,0.85); 
     width: 100%;
     border-radius: 5px 5px 0 0;
+    padding: 35px 20px;
+
+    @include phones {
+        padding: 20px 20px;
+    }
 }
 
 
