--- a/src/styles/components/owner.scss
+++ b/src/styles/components/owner.scss
@@ -9,7 +9,7 @@
     height: 147px;
     border-radius: 50%;
     overflow: hidden;
-    margin-top: 35px;
+    //margin-top: 35px;
 }
 
 .owner__img {
@@ -25,7 +25,7 @@
     text-align: center;
 
     @include phones {
-        font-size: 21px;
+        font-size: 28px;
     }
 
     &--intro {
@@ -46,6 +46,7 @@
     opacity: 0.8;
     @include roboto(400);
     text-align: center;
+    max-width: 100%;
 
     @include phones {
         margin-top: 3px;
