--- a/src/styles/components/policy.scss
+++ b/src/styles/components/policy.scss
@@ -1,5 +1,5 @@
 .policy {
-    grid-area: policy;
+    //grid-area: policy;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,6 +9,12 @@
 
     @include tablets {
         margin-bottom: 230px;
+    }
+
+    @include phones {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        margin-bottom: 270px;
     }
 }
 
