--- a/src/styles/components/preloader.scss
+++ b/src/styles/components/preloader.scss
@@ -1,9 +1,14 @@
 .preloader {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    //background: url('../img/bg/bg_preloader.jpg') 50% 50% no-repeat;
     background-color: $dark-marine;
-    background-size: cover;
+    //background-size: cover;
     z-index: 1000;
     opacity: 1;
     transition: all 0.5s;
