--- a/src/templates/common/hero.pug
+++ b/src/templates/common/hero.pug
@@ -5,7 +5,7 @@ svg.hero__bg-title.js-bg-title
 .hero__content.js-hero-content
     .hero__owner.owner
         .owner__photo
-            img(src="img/content/my_image.jpg" alt="Веб-разработчик").owner__img
+            img(src="img/content/my_image.jpg" alt="Евгения Морозова, веб-дизайнер и веб-разработчик").owner__img
         .owner__title Евгения Морозова
         span.owner__description Личный сайт веб-дизайнера и веб-разработчика
 button(type="button").hero__arrow-btn.js-hero-btn
