--- a/src/templates/common/socials.pug
+++ b/src/templates/common/socials.pug
@@ -3,6 +3,6 @@ include ../common/variables.pug
 ul.socials__list
     each item in socialsItems
         li.socials__item
-            a(href=`${item[1]}` class=`socials__link--${item[0]}`).socials__link
+            a(href=`${item[1]}` class=`socials__link--${item[0]}` target="_blank").socials__link
                 svg.socials__icon 
                     use(xlink:href=`img/icons/symbol/sprite.svg#${item[2]}`)
