--- a/src/templates/common/socials_round.pug
+++ b/src/templates/common/socials_round.pug
@@ -4,7 +4,7 @@ include ../common/variables.pug
 ul.socials__list
     each item in socialsItems
         li.socials__item
-            a(href=`${item[1]}` class=`socials__link--${item[0]}`).socials__link
+            a(href=`${item[1]}` class=`socials__link--${item[0]}` target="_blank").socials__link
                 .socials__icon-wrapper
                     svg.socials__icon.socials__icon--flat
                         use(xlink:href=`img/icons/symbol/sprite.svg#${item[2]}`)
