--- a/src/templates/pages/about.pug
+++ b/src/templates/pages/about.pug
@@ -66,7 +66,7 @@ block content
                             li.contacts__item(class=`contacts__item--${item.type}`) 
                                 svg.contacts__icon
                                     use(xlink:href=`img/icons/symbol/sprite.svg#${item.svg}`)
-                                a.contacts__link(href=`${item.link}`) #{item.contact}
+                                a.contacts__link(href=`${item.link}` target="_blank") #{item.contact}
         include ../common/footer.pug
     script(src='js/main.min.js')
     script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8yfmr5iCoJlQlgOHbQxy473Yb7sja91U&callback=initMap" async defer)
