--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -16,7 +16,7 @@ block content
                 .hero__content.hero__content--blog.js-hero-content
                     .hero__owner.owner
                         .owner__photo
-                            img(src="img/content/my_image.jpg" alt="Веб-разработчик").owner__img
+                            img(src="img/content/my_image.jpg" alt="Евгения Морозова, веб-дизайнер и веб-разработчик").owner__img
                         .title__wrapper
                             h1.title.title--blog Вопросы и ответы
                             svg.title__bg.title__bg--blog.js-bg-title
