--- a/src/templates/pages/works.pug
+++ b/src/templates/pages/works.pug
@@ -25,7 +25,7 @@ block content
                             .works__description
                                 .subtitle.subtitle--works.js-slide-subtitle "Лендинг для магазина бургеров Mr.Burger"
                                 .works__techs.js-slide-techs "HTML5, CSS3, JavaScript&ampjQuery, Ajax, Gulp, Git"
-                                a(href="https://usp-evgeniya.github.io/burgers/").works__link.js-slide-link
+                                a(href="https://usp-evgeniya.github.io/burgers/" target="_blank").works__link.js-slide-link
                                     svg.works__link-icon
                                         use(xlink:href="img/icons/symbol/sprite.svg#link")
                                     .works__link-text Посмотреть сайт
@@ -55,7 +55,7 @@ block content
                                 .comments__photo
                                     img(src=`${item.img}` alt=`${item.person}`).comments__img
                                 .comments__person
-                                    a(href=`${item.link}`).comments__person--name #{item.person}
+                                    a(href=`${item.link}` target="_blank").comments__person--name #{item.person}
                                     .comments__person--occupation #{item.occupation}
                 .contact-form__wrapper.js-blur-wrapper
                     .contact-form__blur.js-blur-form
